--- a/pom.xml
+++ b/pom.xml
@@ -72,10 +72,17 @@
 			<artifactId>storm</artifactId>
 			<version>0.9.0.1</version>
 		</dependency>
+		
+		<!-- mysql -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>6.0.2</version>
+		</dependency>
 	</dependencies>
 	<modules>
 		<module>pactise-common</module>
 		<module>practise_core</module>
-    <module>practise_web</module>
+    	<module>practise_web</module>
   </modules>
 </project>
